# wezterm

./: CLAUDE.md  Cargo.toml  MULTI_STREAM_DESIGN.md  NOTES.md  QUIC_PLAN.md  STACK_STRUCTURE.md
.cargo/: config.toml
.claude/: settings.local.json
ci/: deploy.sh
codec/src/: lib.rs
config/: Cargo.toml
config/src/: config.rs  lib.rs  quic.rs  tls.rs
config/tests/: quic_integration.rs
docs/: multiplexing.md
docs/config/lua/: QuicDomainClient.md  QuicDomainServer.md
docs/config/lua/config/: quic_clients.md  quic_servers.md
mux/src/: connui.rs  tab.rs
src/: main.rs
src/config/: mod.rs  tls.rs
src/server/: client.rs  listener.rs  pollable.rs
src/server/listener/: clientsession.rs  local.rs  mod.rs  not_ossl.rs  ossl.rs  quic.rs
term/src/: lib.rs  selection.rs  terminalstate.rs
tmp/: cleanup.sh  connect-client.sh  generate-certs.sh  init-server-pki.sh  start-server.sh  wezterm.lua
tmp/client/: wezterm.lua
tmp/client/data/share/wezterm/: check_update
tmp/server/: wezterm.lua
wezterm/: Cargo.toml
wezterm-client/: Cargo.toml
wezterm-client/src/: client.rs  domain.rs  lib.rs  quic_client.rs  ssh_bootstrap.rs
wezterm-client/src/client/: quic_client.rs
wezterm-gui/: Cargo.toml
wezterm-gui-subcommands/: Cargo.toml
wezterm-mux-server/: Cargo.toml
wezterm-mux-server-impl/: Cargo.toml
wezterm-mux-server-impl/src/: dispatch.rs  lib.rs  pki.rs  sessionhandler.rs
wezterm-mux-server/src/: main.rs  ossl.rs  quic_server.rs
wezterm/src/cli/: mod.rs  quic_creds.rs
