[package]
name = "wezterm-mux-server-impl"
version = "0.1.0"
authors = ["Wez Furlong <wez@wezfurlong.org>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
quic = ["config/quic", "wezterm-client/quic", "quinn", "rustls-pemfile"]

[dependencies]
anyhow.workspace = true
async-io.workspace = true
async_ossl.workspace = true
codec.workspace = true
config.workspace = true
dns-lookup.workspace = true
futures.workspace = true
hostname.workspace = true
lazy_static.workspace = true
libc.workspace = true
log.workspace = true
mux.workspace = true
portable-pty = { workspace=true, features = ["serde_support"]}
promise.workspace = true
rangeset.workspace = true
rcgen.workspace = true
quinn = { workspace = true, optional = true }
rustls-pemfile = { version = "2", optional = true }
smol.workspace = true
termwiz = { workspace=true, features=["use_serde"] }
time.workspace = true
url.workspace = true
wezterm-client.workspace = true
wezterm-term = { workspace=true, features=["use_serde"] }
wezterm-uds.workspace = true

[target."cfg(windows)".dependencies]
winapi = { workspace=true, features = [ "winuser" ]}
