[package]
name = "wezterm-mux-server"
version = "0.1.0"
authors = ["Wez Furlong <wez@wezfurlong.org>"]
edition = "2018"
resolver = "2"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async_ossl.workspace = true
clap.workspace = true
codec.workspace = true
config.workspace = true
env-bootstrap.workspace = true
libc.workspace = true
log.workspace = true
mux.workspace = true
mlua.workspace = true
openssl.workspace = true
portable-pty = { workspace=true, features = ["serde_support"]}
promise.workspace = true
umask.workspace = true
wezterm-blob-leases = {workspace=true, features=["simple_tempdir"]}
wezterm-mux-server-impl.workspace = true
wezterm-gui-subcommands.workspace = true
wezterm-term.workspace = true
quinn = { workspace = true, optional = true }
quinn-proto = { workspace = true, optional = true }
webpki-roots = { workspace = true, optional = true }
wezterm-client = { workspace = true, optional = true }
rustls-pemfile = { version = "2", optional = true }
smol = { workspace = true, optional = true }
futures-lite = { workspace = true, optional = true }

[features]
quic = ["quinn", "quinn-proto", "webpki-roots", "wezterm-client", "rustls-pemfile", "smol", "futures-lite", "config/quic", "wezterm-mux-server-impl/quic"]

[target."cfg(windows)".dependencies]
winapi = { workspace=true, features = [ "winuser" ]}

[target.'cfg(windows)'.build-dependencies]
embed-resource.workspace = true
cc.workspace = true
